# maple

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
docs/: phase-0.md  phase-1.md  plan.md
maple/: Cargo.toml
maple-cluster/: Cargo.toml
maple-cluster/src/: lib.rs
maple-db/: Cargo.toml
maple-db/src/: ai.rs  collections.rs  face_detector.rs  faces.rs  lib.rs  metadata.rs  query.rs  scanner.rs  schema.rs  worker.rs
maple-db/src/models/: detection.rs  device.rs  embedding.rs  factory.rs  mod.rs  preprocessor.rs  scrfd.rs  session.rs
maple-embed/: Cargo.toml
maple-embed/src/: lib.rs
maple-import/: Cargo.toml
maple-import/src/: copy.rs  exif_date.rs  hash.rs  image_source.rs  lib.rs  raw.rs  scan.rs
maple-state/: Cargo.toml  defaults.toml
maple-state/src/: lib.rs  seen.rs
maple-tournament/: Cargo.toml
maple-tournament/src/: lib.rs
maple-ui/: Cargo.toml
maple-ui/src/: hotkeys.rs  lib.rs  thumbnail.rs  window.rs
maple-ui/src/views/: home.rs  image_browser.rs  mod.rs  source_picker.rs  thumbnail_grid.rs
maple-ui/src/views/image_browser/: filmstrip.rs  mod.rs  preview.rs  scan.rs
maple/src/: app.rs  main.rs  style.css
