[workspace]
resolver = "2"
members = [
    "maple",
    "maple-ui",
    "maple-embed",
    "maple-cluster",
    "maple-tournament",
    "maple-import",
    "maple-state",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# UI
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }

# Inference (not wired in phase 0)
# ort = { version = "2", features = ["load-dynamic"] }

# Image
image = "0.25"
fast_image_resize = "5"
kamadak-exif = "0.5"

# Data
ndarray = "0.16"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Testing
tempfile = "3"
