[workspace]
resolver = "2"
members = [
    "maple",
    "maple-ui",
    "maple-embed",
    "maple-cluster",
    "maple-tournament",
    "maple-import",
    "maple-state",
    "maple-db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# UI
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }

# ONNX Runtime (ort 2.x — supports CPU, CUDA, TensorRT via execution providers)
# With load-dynamic, the onnxruntime shared library is loaded at runtime from
# ORT_DYLIB_PATH or standard system library paths.  Install a CUDA-enabled
# onnxruntime release to unlock GPU inference.
ort = { version = "=2.0.0-rc.12", features = ["ndarray", "load-dynamic"] }

# Image
image = "0.25"
fast_image_resize = "5"
kamadak-exif = "0.5"

# Data
ndarray = "0.17.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# HTTP (blocking, for AI API calls)
ureq = { version = "2", features = ["json"] }

# Encoding
base64 = "0.22"

# Testing
tempfile = "3"
