[package]
name = "maple-db"
version.workspace = true
edition.workspace = true

[dependencies]
maple-import = { path = "../maple-import" }
maple-state = { path = "../maple-state" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
kamadak-exif = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
